[feat] Download da planilha individual de cada turma implementado

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -107,8 +107,6 @@
                             </td>
                         {% endif %}
                     {% endfor %}
-
-
                 </tr>
             {% endfor %}
         </table>
@@ -116,7 +114,7 @@
 
         <div class='pt-5'>
             <button onclick='salvarTabelas()' class="btn btn-primary">Salvar</button>
-            <button class="btn btn-secondary">Exportar Planilhas</button>
+            <button class="btn btn-secondary" onclick='window.location.href="/planilha?turma_id={{ _GET['turma_id'] }}"'>Exportar Planilha</button>
         </div>
     </div>
 </div>
