[fix] Bug de exclusão de salas corrigido

--- a/src/views/sala.twig
+++ b/src/views/sala.twig
@@ -40,7 +40,7 @@
                         </a>
                     </td>
                     <td>
-                        <form action="/professores/delete" method="post">
+                        <form action="/salas/delete" method="post">
                             <input type="hidden" name="id" value="{{ sala.id }}">
                             <input class="bg-transparent border-0" type="submit" value="🗑️">
                         </form>
