--- a/src/views/sala.twig
+++ b/src/views/sala.twig
@@ -9,7 +9,7 @@
                 <span class="input-group-text" id="basic-addon1">Código</span>
                 <input class="form-control" type="text" name="id" placeholder="ID da sala" value="{{ _GET['id'] }}" readonly>
             </div>
-            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome da sala" value="{{ _GET['nome'] }}" autofocus>
+            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome da sala" value="{{ salaSelecionada['nome'] }}" autofocus>
         {% else %}
             <h2 class="mb-4">Adicionar Sala</h2>
             <input class="form-control mb-2" type="text" name="nome" placeholder="Nome da sala" autofocus>
@@ -33,9 +33,8 @@
                 <tr>
                     <th scope="col">{{ sala.id }}</th>
                     <td>{{ sala.nome }}</td>
-                    <td>{{ sala.tempos_semanais }}</td>
                     <td>
-                        <a class="link-underline link-underline-opacity-0" href="/salas?id={{ sala.id }}&nome={{ sala.nome }}">
+                        <a class="link-underline link-underline-opacity-0" href="/salas?id={{ sala.id }}">
                         📝
                         </a>
                     </td>
