--- a/src/views/professor.twig
+++ b/src/views/professor.twig
@@ -3,30 +3,80 @@
 {% block content %}
 <div class='container'>
     <form method='POST' class='p-5'>
-        {% if _GET['id'] is defined %}
+        <input type='hidden' name='actor' value='professor'>
+        {% if _GET['professor_id'] is defined %}
             <h2 class="mb-4">Editar Professor</h2>
             <div class='input-group mb-2'>
                 <span class="input-group-text" id="basic-addon1">Código</span>
-                <input class="form-control" type="text" name="id" placeholder="ID do professor" value="{{ _GET['id'] }}" readonly>
+                <input class="form-control" type="text" name="id" placeholder="ID do professor" value="{{ professorSelecionado['id'] }}" readonly>
             </div>
             <input class="form-control mb-2" type="text" name="nome" placeholder="Nome do professor" value="{{ professorSelecionado['nome'] }}" autofocus>
-            <input class="form-control mb-2" type="text" name="tempos_semanais" placeholder="Tempos Semanais" value="{{ professorSelecionado['tempos_semanais'] }}">
         {% else %}
             <h2 class="mb-4">Adicionar Professor</h2>
             <input class="form-control mb-2" type="text" name="nome" placeholder="Nome do professor" autofocus>
-            <input class="form-control mb-2" type="text" name="tempos_semanais" placeholder="Tempos Semanais">
         {% endif %}
         
         <button type="submit" class="btn btn-primary">Salvar</button>
         {{ _GET['id'] ? "Ou <a href='/professores'>adicionar professor</a>" }}
     </form>
 
+    {% if professorSelecionado %}
+        <form class='px-5 pb-5' method='POST'>
+            <input type='hidden' name='actor' value='matricula'>
+            <input type='hidden' name='professor_id' value='{{ professorSelecionado.id }}'>
+            <h4>Matrículas</h4>
+            {% if _GET['matricula_id'] is defined %}
+            <div class='input-group mb-2'>
+                <span class="input-group-text" id="basic-addon1">Código</span>
+                <input class="form-control" type="text" name="id" placeholder="ID do professor" value="{{ matriculaSelecionada['id'] }}" readonly>
+            </div>
+            <input class="form-control mb-2" type="text" name="matricula" placeholder="Matrícula" value="{{ matriculaSelecionada['matricula'] }}">
+            <input class="form-control mb-2" type="text" name="carga_horaria" placeholder="Carga horária" value="{{ matriculaSelecionada['carga_horaria'] }}">
+            {% else %}
+                <input class="form-control mb-2" type="text" name="matricula" placeholder="Matrícula">
+                <input class="form-control mb-2" type="text" name="carga_horaria" placeholder="Carga horária">
+            {% endif %}
+            <button class='btn btn-primary' type='submit'>{{ _GET['matricula_id'] ? 'Salvar' : 'Adicionar' }}</button>
+            {{ _GET['matricula_id'] ? ("Ou <a href='/professores?professor_id=#{professorSelecionado.id}'>adicionar matrícula</a>")|raw }}
+        </form>
+
+        <div class='px-5'>
+            <h4>Lista de Matrículas de {{ professorSelecionado['nome'] }}</h4>
+            <table class='table table-hover'>
+                <tr>
+                    <th>Matrícula</th>
+                    <th>Carga Horária</th>
+                    <th>Editar</th>
+                    <th>Excluir</th>
+                </tr>
+                {% for matricula in matriculas %}
+                    <tr>
+                        <td>{{ matricula['matricula'] }}</td>
+                        <td>{{ matricula['carga_horaria'] }}</td>
+                        <td>
+                            <a class="link-underline link-underline-opacity-0" href="/professores?professor_id={{ professorSelecionado.id }}&matricula_id={{ matricula.id }}">
+                            📝
+                            </a>
+                        </td>
+                        <td>
+                            <form action="/professores/matricula/delete" method="post">
+                                <input type="hidden" name="id" value="{{ matricula.id }}">
+                                <input class="bg-transparent border-0" type="submit" value="🗑️">
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+    {% endif %}
+    
+
+    <h2>Lista de Professores</h2>
     <table class='table table-hover'>
         <thead>
             <tr>
                 <th scope='col'>Código</th>
                 <th scope='col'>Nome</th>
-                <th scope='col'>Tempos Semanais</th>
                 <th scope='col'>Editar</th>
                 <th scope='col'>Excluir</th>
             </tr>
@@ -36,9 +86,8 @@
                 <tr>
                     <th scope="col">{{ professor.id }}</th>
                     <td>{{ professor.nome }}</td>
-                    <td>{{ professor.tempos_semanais }}</td>
                     <td>
-                        <a class="link-underline link-underline-opacity-0" href="/professores?id={{ professor.id }}">
+                        <a class="link-underline link-underline-opacity-0" href="/professores?professor_id={{ professor.id }}">
                         📝
                         </a>
                     </td>
