--- a/src/views/curso.twig
+++ b/src/views/curso.twig
@@ -1,7 +1,52 @@
 {% extends 'layouts/app.twig' %}
 
 {% block content %}
-<div>
+<div class='container'>
+    <form method='POST' class='p-5'>
+        {% if _GET['id'] is defined %}
+            <h2 class="mb-4">Editar Curso</h2>
+            <div class='input-group mb-2'>
+                <span class="input-group-text" id="basic-addon1">Código</span>
+                <input class="form-control" type="text" name="id" placeholder="ID do curso" value="{{ _GET['id'] }}" readonly>
+            </div>
+            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome do curso" value="{{ cursoSelecionado['nome'] }}" autofocus>
+        {% else %}
+            <h2 class="mb-4">Adicionar Curso</h2>
+            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome do curso" autofocus>
+        {% endif %}
 
+        <button type="submit" class="btn btn-primary">Salvar</button>
+        {{ _GET['id'] ? "Ou <a href='/cursos'>adicionar curso</a>" }}
+    </form>
+
+    <table class='table table-hover'>
+        <thead>
+            <tr>
+                <th scope='col'>Código</th>
+                <th scope='col'>Nome</th>
+                <th scope='col'>Editar</th>
+                <th scope='col'>Excluir</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for curso in cursos %}
+                <tr>
+                    <th scope="col">{{ curso.id }}</th>
+                    <td>{{ curso.nome }}</td>
+                    <td>
+                        <a class="link-underline link-underline-opacity-0" href="/cursos?id={{ curso.id }}">
+                        📝
+                        </a>
+                    </td>
+                    <td>
+                        <form action="/cursos/delete" method="post">
+                            <input type="hidden" name="id" value="{{ curso.id }}">
+                            <input class="bg-transparent border-0" type="submit" value="🗑️">
+                        </form>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
