--- a/src/views/layouts/app.twig
+++ b/src/views/layouts/app.twig
@@ -9,6 +9,20 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+    <!-- dataTables -->
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/datatables.min.js"></script>
+    <script src="/static/js/dataTables.buttons.min.js"></script>
+    <script src="/static/js/dataTables.rowsGroup.js"></script>
+    <script src="/static/js/buttons.html5.min.js"></script>
+    <script src="/static/js/buttons.print.min.js"></script>
+    <script src="/static/js/jszip.min.js"></script>
+    <script src="/static/js/pdfmake.min.js"></script>
+    <script src="/static/js/vfs_fonts.js"></script>
+    <link rel="stylesheet" href="/static/css/datatables.min.css">
+
+    <link rel="stylesheet" href="/static/css/main.css">
 </header>
 <body>
     <header>
@@ -37,7 +51,13 @@
                             <a class="nav-link" href="/cursos">Cursos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/disciplinas">Disciplinas</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/salas">Salas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/periodos">Períodos</a>
                         </li>
                     </ul>
                 </div>
