--- a/src/views/turma.twig
+++ b/src/views/turma.twig
@@ -2,46 +2,104 @@
 
 {% block content %}
 <div class='container'>
+    <div class="container mt-5">
+        <form class='d-flex gap-3'>
+            <select name="periodoLetivo" class='form-select w-25'>
+                <option value="" {{ _GET['periodoLetivo'] is defined ? '' : 'selected' }}>Selecione um período</option>
+                {% for periodo in periodosLetivos %}
+                    <option value="{{ periodo['id'] }}" {{ periodoLetivo == periodo['id'] ? 'selected' : '' }}>{{ periodo['especificacao'] }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit" class="btn btn-primary">Filtrar</button>
+        </form>
+    </div>
+
     <form method='POST' class='p-5'>
         {% if turmaSelecionada != null %}
             <h2 class="mb-4">Editar Turma</h2>
             <div class='input-group mb-2'>
-                <span class="input-group-text" id="basic-addon1">Código</span>
+                <span class="input-group-text" id="id-span">Código</span>
                 <input class="form-control" type="text" name="id" placeholder="ID da turma" value="{{ turmaSelecionada['id'] }}" readonly>
             </div>
-            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome da turma" value="{{ turmaSelecionada['nome'] }}" autofocus>
-            <select name="turno" class='form-select w-25'>
-                <option value="" {{ turmaSelecionada['turno'] is defined ? '' : 'selected' }}>Selecione um turno</option>
-                <option value="Manhã" {{ turmaSelecionada['turno'] == 'Manhã' ? 'selected' : '' }}>Manhã</option>
-                <option value="Tarde" {{ turmaSelecionada['turno'] == 'Tarde' ? 'selected' : '' }}>Tarde</option>
-                <option value="Noite" {{ turmaSelecionada['turno'] == 'Noite' ? 'selected' : '' }}>Noite</option>
-            </select>
         {% else %}
-            <h2 class="mb-4">Adicionar Turma</h2>
-            <input class="form-control mb-2" type="text" name="nome" placeholder="Nome da turma" autofocus>
-            {# <input class="form-control mb-2" type="text" name="turno" placeholder="Turno"> #}
-            <select name="turno" class='form-select w-25'>
-                <option value="" selected>Selecione um turno</option>
-                <option value="Manhã">Manhã</option>
-                <option value="Tarde">Tarde</option>
-                <option value="Noite">Noite</option>
-            </select>
+            <h2 class="mb-4">Adicionar Turma</h2>   
         {% endif %}
 
-        <div class='row py-4'>
-            <h4>Selecione os professores:</h4>
+        <select name="turno" class='form-select w-25'>
+            <option value="" selected>Selecione um turno</option>
+            <option value="MANHA" {{ turmaSelecionada['turno'] == 'MANHA' ? 'selected' : '' }}>Manhã</option>
+            <option value="TARDE" {{ turmaSelecionada['turno'] == 'TARDE' ? 'selected' : '' }}>Tarde</option>
+            <option value="NOITE" {{ turmaSelecionada['turno'] == 'NOITE' ? 'selected' : '' }}>Noite</option>
+        </select>
 
-            {% for professor in professores %}
-                <div class='col-md-3'>
+        <div class="form-floating my-3">
+            <input name="etapa" type="text" class="form-control" id="etapa-input" placeholder="1" value="{{ turmaSelecionada['etapa'] }}">
+            <label for="etapa-input">Digite a etapa</label>
+        </div>
+
+        <div class='form-floating mt-3'>
+            <select name="curso" id="curso-select" class="form-select">
+                {% for curso in cursos %}
+                    <option value="{{ curso.id }}" {{ turmaSelecionada['cursoId'] == curso.id ? 'selected' : '' }}>
+                        {{ curso.nome }}
+                    </option>
+                {% endfor %}
+            </select>
+            <label for="curso-select">Selecione o Curso</label>
+        </div>
+
+        <div class='form-floating my-3'>
+            <select name="periodoLetivo" id="periodo-select" class="form-select">
+                {% for periodo in periodosLetivos %}
+                    <option value="{{ periodo.id }}" {{ turmaSelecionada['periodo_letivo_id'] == periodo.id ? 'selected' : '' }}>
+                        {{ periodo.especificacao }}
+                    </option>
+                {% endfor %}
+            </select>
+            <label for="periodo-select">Selecione o período letivo</label>
+        </div>
+
+        <div class='row py-4 mx-1 gap-3 w-full'>
+            <h4>Selecione o professor:</h4>
+
+            {% for professor in professorMatriculas %}
+                <div class='col-md-3 border border-dark rounded p-2'>
                     <input 
-                        id='{{ professor.nome }}-checkbox' 
-                        type='checkbox' 
-                        name='professores[]' 
-                        value='{{ professor.id }}' 
-                        role='button'
-                        {% if professor['id'] in turmaSelecionada.professores %} checked {% endif %}
+                            id='professor-{{ professor.id }}-radio' 
+                            type='radio' 
+                            name='professor' 
+                            value='{{ professor.id }}' 
+                            role='button'
+                            {% if turmaSelecionada['professorMatriculaId'] == professor.id %} checked {% endif %}
                         >
-                    <label for='{{ professor.nome }}-checkbox' role='button'>{{ professor.nome }}</label>
+                    <label for='professor-{{ professor.id }}-radio' role='button'>
+                        {{ professor.nome }} <br>
+                        {{ professor.matricula }} <br>
+                        <span class="badge {{ professor.carga_total > professor.carga_horaria ? 'bg-danger' : 'bg-success' }}">
+                            {{ professor.carga_total }}/{{ professor.carga_horaria }} tempos
+                        </span>
+                    </label>
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class='row py-4 mx-1 gap-3 w-full'>
+            <h4>Selecione a disciplina:</h4>
+
+            {% for disciplina in disciplinas %}
+                <div class='col-md-3 border border-dark rounded p-2'>
+                    <input 
+                            id='disciplina-{{ disciplina.id }}-radio' 
+                            type='radio' 
+                            name='disciplina' 
+                            value='{{ disciplina.id }}' 
+                            role='button'
+                            {% if turmaSelecionada['disciplinaId'] == disciplina.id %} checked {% endif %}
+                        >
+                    <label for='disciplina-{{ disciplina.id }}-radio' role='button'>
+                        {{ disciplina.nome }} - {{ disciplina.nomeCurso }}<br>
+                        {{ disciplina.tempos }} {{ disciplina.tempos == 1 ? 'tempo' : 'tempos' }}
+                    </label>
                 </div>
             {% endfor %}
         </div>
@@ -49,12 +107,16 @@
         <button type="submit" class="btn btn-primary">Salvar</button>
         {{ _GET['id'] ? "Ou <a href='/turmas'>adicionar turma</a>" }}
     </form>
-    <table class='table table-hover'>
+
+    <table class='table table-hover mb-5'>
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Nome</th>
+                <th>Professor</th>
+                <th>Disciplina</th>
+                <th>Carga Horária</th>
                 <th>Turno</th>
+                <th>Etapa</th>
                 <th>Editar</th>
                 <th>Excluir</th>
             </tr>
@@ -63,8 +125,11 @@
             {% for turma in turmas %}
                 <tr>
                     <td>{{ turma.id }}</td>
-                    <td>{{ turma.nome }}</td>
+                    <td>{{ turma.nomeProfessor }} - {{ turma.matriculaProfessor }}</td>
+                    <td>{{ turma.nomeDisciplina }}</td>
+                    <td>{{ turma.cargaHorariaDisc }}h</td>
                     <td>{{ turma.turno }}</td>
+                    <td>{{ turma.etapa }}</td>
                     <td>
                         <a class="link-underline link-underline-opacity-0" href="/turmas?id={{ turma.id }}">
                         📝
